# pythonEstelink

./: .gitignore  Dockerfile  Makefile  Readme.md
estelink/: .env  conftest.py  pyproject.toml
estelink/tests/: test_entrance.py  test_home.py
estelink/utils/: application.py
estelink/utils/helpers/: navigation.py
estelink/utils/pages/: home_page.py  home_page_estelink.py
scripts/: install.sh  start_tests_allure.sh
